-- PostgreSQL Schema for CardDemo Migration
-- Generated by Conductor

-- ============================================================================
-- Task 1: 顧客・アカウント・カード情報
-- ============================================================================

-- 顧客マスター (Customer)
CREATE TABLE customer (
    cust_id                 INTEGER PRIMARY KEY, -- CUST-ID PIC 9(09)
    first_name              VARCHAR(25),         -- CUST-FIRST-NAME
    middle_name             VARCHAR(25),         -- CUST-MIDDLE-NAME
    last_name               VARCHAR(25),         -- CUST-LAST-NAME
    addr_line_1             VARCHAR(50),         -- CUST-ADDR-LINE-1
    addr_line_2             VARCHAR(50),         -- CUST-ADDR-LINE-2
    addr_line_3             VARCHAR(50),         -- CUST-ADDR-LINE-3
    addr_state_cd           VARCHAR(2),          -- CUST-ADDR-STATE-CD
    addr_country_cd         VARCHAR(3),          -- CUST-ADDR-COUNTRY-CD
    addr_zip                VARCHAR(10),         -- CUST-ADDR-ZIP
    phone_num_1             VARCHAR(15),         -- CUST-PHONE-NUM-1
    phone_num_2             VARCHAR(15),         -- CUST-PHONE-NUM-2
    ssn                     INTEGER,             -- CUST-SSN PIC 9(09)
    govt_issued_id          VARCHAR(20),         -- CUST-GOVT-ISSUED-ID
    dob                     DATE,                -- CUST-DOB-YYYYMMDD
    eft_account_id          VARCHAR(10),         -- CUST-EFT-ACCOUNT-ID
    pri_card_holder_ind     CHAR(1),             -- CUST-PRI-CARD-HOLDER-IND
    fico_credit_score       INTEGER              -- CUST-FICO-CREDIT-SCORE
);

-- アカウントマスター (Account)
CREATE TABLE account (
    acct_id                 BIGINT PRIMARY KEY,  -- ACCT-ID PIC 9(11) -> BIGINT required
    active_status           CHAR(1),             -- ACCT-ACTIVE-STATUS
    curr_bal                NUMERIC(12, 2),      -- ACCT-CURR-BAL PIC S9(10)V99
    credit_limit            NUMERIC(12, 2),      -- ACCT-CREDIT-LIMIT
    cash_credit_limit       NUMERIC(12, 2),      -- ACCT-CASH-CREDIT-LIMIT
    open_date               DATE,                -- ACCT-OPEN-DATE
    expiration_date         DATE,                -- ACCT-EXPIRAION-DATE
    reissue_date            DATE,                -- ACCT-REISSUE-DATE
    curr_cyc_credit         NUMERIC(12, 2),      -- ACCT-CURR-CYC-CREDIT
    curr_cyc_debit          NUMERIC(12, 2),      -- ACCT-CURR-CYC-DEBIT
    addr_zip                VARCHAR(10),         -- ACCT-ADDR-ZIP
    group_id                VARCHAR(10)          -- ACCT-GROUP-ID
);

-- カードマスター (Card)
CREATE TABLE card (
    card_num                VARCHAR(16) PRIMARY KEY, -- CARD-NUM PIC X(16)
    acct_id                 BIGINT,              -- CARD-ACCT-ID
    cvv_cd                  INTEGER,             -- CARD-CVV-CD
    embossed_name           VARCHAR(50),         -- CARD-EMBOSSED-NAME
    expiration_date         DATE,                -- CARD-EXPIRAION-DATE
    active_status           CHAR(1)              -- CARD-ACTIVE-STATUS
);

-- カードクロスリファレンス (Card Xref) - 多対多の解消や検索用だが、RDBでは不要な場合もある。移行のため保持。
CREATE TABLE card_xref (
    card_num                VARCHAR(16),         -- XREF-CARD-NUM
    cust_id                 INTEGER,             -- XREF-CUST-ID
    acct_id                 BIGINT,              -- XREF-ACCT-ID
    PRIMARY KEY (card_num, cust_id, acct_id)
);

-- ============================================================================
-- Task 2: トランザクション履歴・承認データ
-- ============================================================================

-- トランザクション履歴 (Transaction History)
CREATE TABLE transaction_history (
    tran_id                 VARCHAR(16) PRIMARY KEY, -- TRAN-ID
    tran_type_cd            VARCHAR(2),          -- TRAN-TYPE-CD
    tran_cat_cd             INTEGER,             -- TRAN-CAT-CD
    source                  VARCHAR(10),         -- TRAN-SOURCE
    description             VARCHAR(100),        -- TRAN-DESC
    amount                  NUMERIC(11, 2),      -- TRAN-AMT
    merchant_id             INTEGER,             -- TRAN-MERCHANT-ID
    merchant_name           VARCHAR(50),         -- TRAN-MERCHANT-NAME
    merchant_city           VARCHAR(50),         -- TRAN-MERCHANT-CITY
    merchant_zip            VARCHAR(10),         -- TRAN-MERCHANT-ZIP
    card_num                VARCHAR(16),         -- TRAN-CARD-NUM
    orig_ts                 TIMESTAMP,           -- TRAN-ORIG-TS
    proc_ts                 TIMESTAMP            -- TRAN-PROC-TS
);

-- トランザクションカテゴリバランス (Category Balance)
CREATE TABLE transaction_category_balance (
    acct_id                 BIGINT,              -- TRANCAT-ACCT-ID
    tran_type_cd            VARCHAR(2),          -- TRANCAT-TYPE-CD
    tran_cat_cd             INTEGER,             -- TRANCAT-CD
    balance                 NUMERIC(11, 2),      -- TRAN-CAT-BAL
    PRIMARY KEY (acct_id, tran_type_cd, tran_cat_cd)
);

-- ディスクロージャーグループ (Disclosure Group)
CREATE TABLE disclosure_group (
    acct_group_id           VARCHAR(10),         -- DIS-ACCT-GROUP-ID
    tran_type_cd            VARCHAR(2),          -- DIS-TRAN-TYPE-CD
    tran_cat_cd             INTEGER,             -- DIS-TRAN-CAT-CD
    int_rate                NUMERIC(6, 2),       -- DIS-INT-RATE
    PRIMARY KEY (acct_group_id, tran_type_cd, tran_cat_cd)
);

-- 不正検知・承認履歴 (Auth Fraud) - from DB2
CREATE TABLE auth_fraud (
    card_num                VARCHAR(16),
    auth_ts                 TIMESTAMP,
    auth_type               VARCHAR(4),
    card_expiry_date        VARCHAR(4),
    message_type            VARCHAR(6),
    message_source          VARCHAR(6),
    auth_id_code            VARCHAR(6),
    auth_resp_code          VARCHAR(2),
    auth_resp_reason        VARCHAR(4),
    processing_code         VARCHAR(6),
    transaction_amt         NUMERIC(12, 2),
    approved_amt            NUMERIC(12, 2),
    merchant_cat_code       VARCHAR(4),
    acqr_country_code       VARCHAR(3),
    pos_entry_mode          SMALLINT,
    merchant_id             VARCHAR(15),
    merchant_name           VARCHAR(22),
    merchant_city           VARCHAR(13),
    merchant_state          VARCHAR(2),
    merchant_zip            VARCHAR(9),
    transaction_id          VARCHAR(15),
    match_status            CHAR(1),
    auth_fraud              CHAR(1),
    fraud_rpt_date          DATE,
    acct_id                 BIGINT,
    cust_id                 INTEGER,
    PRIMARY KEY (card_num, auth_ts)
);

-- 承認保留サマリー (Pending Auth Summary) - from IMS Root
CREATE TABLE pending_auth_summary (
    acct_id                 BIGINT PRIMARY KEY   -- ACCNTID
);

-- 承認保留詳細 (Pending Auth Detail) - from IMS Child
CREATE TABLE pending_auth_detail (
    acct_id                 BIGINT,              -- Parent Key
    auth_ts                 TIMESTAMP,           -- PAUT9CTS (Assuming timestamp string)
    PRIMARY KEY (acct_id, auth_ts)
);

-- ============================================================================
-- Task 3: 参照データ
-- ============================================================================

-- トランザクションタイプ (Transaction Type)
CREATE TABLE transaction_type (
    tran_type_cd            VARCHAR(2) PRIMARY KEY, -- TRAN-TYPE
    description             VARCHAR(50)          -- TRAN-TYPE-DESC
);

-- トランザクションカテゴリ (Transaction Category)
CREATE TABLE transaction_category (
    tran_type_cd            VARCHAR(2),          -- TRAN-TYPE-CD
    tran_cat_cd             INTEGER,             -- TRAN-CAT-CD
    description             VARCHAR(50),         -- TRAN-CAT-TYPE-DESC
    PRIMARY KEY (tran_type_cd, tran_cat_cd)
);
